--- a/src/assets/scss/products.scss
+++ b/src/assets/scss/products.scss
@@ -1,10 +1,11 @@
 .products-all-content{
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 .products-text{
   text-align: center;
   font-size: 50px;
+  font-weight: bold;
 }
 
 .products-all-table{
