--- a/src/assets/scss/search.scss
+++ b/src/assets/scss/search.scss
@@ -85,8 +85,8 @@
     width: 50px;
     height: 50px;
     outline: none;
-    border: none;
-    background: rgb(46, 44, 45);
+    border: none !important;
+    background: rgb(46, 44, 45) !important;
     color: white;
     text-shadow: 0 0 10px rgb(46, 44, 45);
     padding: 0 80px 0 20px;
