--- a/src/assets/scss/companies.scss
+++ b/src/assets/scss/companies.scss
@@ -1,28 +1,35 @@
 .companies-all-content{
-    padding-top: 5%;
+    padding-top: 4%;
     font-weight: bold;
 }
 
 .companies-text{
     text-align: center;
-font-size: 50px;
+    font-size: 50px;
 }
 
 .companies-all-table{
-    padding: 2%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.companies-table{
+    padding: 1%;
+    width: 50%;
+    height: 100%;
 }
 
 .company-sttng{
-    padding: 3%;
+    padding: 2%;
     margin-top: 5px;
-    display: flex;
-    height: 100%;
     border: 2px;
+    border: 1px solid;
+    border-radius: 5px;
 }
 
 .company-sttng:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
-    border-radius: 30px;
+    border-radius: 15px;
     transition: 0.5s;
 }
 
@@ -33,13 +40,14 @@ font-size: 50px;
 }
 
 .company-logo{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
+    text-align: center;
 }
 
 .company-title{
     float: left;
-    color: rgb(0, 0, 0);
+    color: #000cff;
     font-weight: bolder;
     width: 150px;
     padding-left: 1%;
@@ -67,3 +75,12 @@ font-size: 50px;
     border: 1.8px;
 }
 
+.comp-url{
+    text-align: right;
+    padding: 1%;
+}
+
+.comp-url:hover i{
+    font-size: 20px;
+    transition: 0.5s;
+}
