--- a/src/assets/scss/companies.scss
+++ b/src/assets/scss/companies.scss
@@ -1,6 +1,7 @@
 .companies-all-content{
     padding-top: 4%;
     font-weight: bold;
+    background-color: #ecf0f3;
 }
 
 .companies-text{
@@ -20,14 +21,21 @@
 }
 
 .company-sttng{
-    padding: 2%;
-    margin-top: 5px;
-    border: 2px;
-    border: 1px solid;
-    border-radius: 5px;
-    position: relative;
+    // padding: 2%;
+    // margin-top: 5px;
+    // border: 2px;
+    // border: 1px solid;
+    // border-radius: 5px;
+    // position: relative;
     top: 0;
-    transition: top ease 0.5s;
+    // transition: top ease 0.5s;
+    padding: 48px 64px;
+    border-radius: 16px;
+    background: #ecf0f3;
+    box-shadow:
+      4px 4px 4px 0px #d1d9e6 inset,
+      -4px -4px 4px 0px #ffffff inset;
+    margin: 2%;
 }
 
 .company-sttng:hover{
@@ -35,7 +43,6 @@
     box-shadow: 5px 20px 10px rgb(62, 55, 78, 0.9);
     border-start-start-radius: 25px;
     border-bottom-right-radius: 25px;
-    transition: 0.8s;
     top: -10px;
 }
 
