--- a/src/assets/scss/dashSection.scss
+++ b/src/assets/scss/dashSection.scss
@@ -4,6 +4,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.all-dash{
+    background-color: #ecf0f3;
+}
 .top{
     margin-top: 0;
     height: 60px;
