--- a/src/assets/scss/userSettings.scss
+++ b/src/assets/scss/userSettings.scss
@@ -1,15 +1,32 @@
-.select-list {
-    border: 1px solid green;
-    padding: 20px;
-    width: 250px;
-    margin-top: 20px;
-    cursor: pointer;
+.setting-all-div{
+    background-color: #ecf0f3;
 }
-.select-list.active {
-    border: 1px solid green;
-    background-color:green ;
-    color: white;
-    padding: 20px;
-    width: 250px;
-    margin-top: 20px;
+
+.settings-input{
+    text-align: center;
+}
+
+.settings-input-in{
+    padding: 18px 35px;
+    border-radius: 16px;
+    background: #ecf0f3;
+    box-shadow:
+      4px 4px 4px 0px #d1d9e6 inset,
+      -4px -4px 4px 0px #ffffff inset;
+    margin: 1%;
+    width: 800px;
+    font-size: 15px;
+}
+
+.set-flex{
+    padding-top: 10%;
+    display: flex;
+    padding-left: 2%;
+}
+
+.setting-text{
+    font-size: 50px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: -5%;
 }
