--- a/src/assets/scss/getOffer.scss
+++ b/src/assets/scss/getOffer.scss
@@ -1,14 +1,16 @@
+.getOfferBody{
+  background-color: #ecf0f3;
+}
 
 .UserSettingAll{
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ecf0f3;
   }
   
   .radiogroup {
-    padding: 48px 64px;
+    padding: 25px 30px;
     border-radius: 16px;
     background: #ecf0f3;
     box-shadow:
@@ -39,10 +41,10 @@
   
   .text {
     margin-left: 16px;
-    opacity: .6;
-    transition: opacity .2s linear, transform .2s ease-out;
+    opacity: .8;
+    transition: opacity .2s linear, transform .3s ease-out;
     color: black;
-    font-size: 25px;
+    font-size: 22px;
   }
   
   .indicator {
@@ -54,6 +56,11 @@
       -8px -4px 8px 0px #ffffff,
       8px 4px 12px 0px #d1d9e6;
     overflow: hidden;
+  }
+
+  .tik{
+    font-size: 23px;
+    color: black;
   }
   
   .indicator::before,
@@ -95,3 +102,78 @@
   .label:hover .text {
     opacity: 1;
   }
+
+  .getoffer-text{
+    text-align: left;
+    font-weight: bolder;
+    font-size: 25px;
+    
+  }
+
+  // ---------------------------------------------------------------
+
+  .buttons{
+    display: grid;
+    margin-right: 0px;
+  }
+
+  .getOfferButton:hover,
+  .getOfferButton:focus {
+    box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+    transform: translateY(-0.25em);
+  }
+
+  $colors: ( 
+    raise: #585756
+  );
+
+  @each $button, $color in $colors {
+    .#{$button} {
+      --color: #{$color};
+      --hover: #{adjust-hue($color, 45deg)};
+    }
+  }
+  
+  .getOfferButton {  
+    color: var(--color);
+    transition: 0.25s;
+
+    &:hover,
+    &:focus { 
+      border-color: var(--hover);
+      color: rgb(236, 236, 245);
+      background-color: rgb(37, 37, 37);
+    }
+  }
+
+  .getOfferButton {
+    background: none;
+    border: 1px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+  }
+  .getOffer-input{
+    padding: 18px 35px;
+    border-radius: 16px;
+    background: #ecf0f3;
+    box-shadow:
+      2px 2px 0px 2px #d1d9e6 inset,
+      -2px -2px 0px 2px #ffffff inset;
+    margin: 1%;
+    width: 400px;
+    height: 350px;
+    font-size: 15px;
+    resize: none;
+    // border-style: none; 
+    // border-color: Transparent; 
+    // overflow: auto;  
+  }
+
+  .radiogroup-ex {
+    border-radius: 16px;
+    background: #ecf0f3;
+    margin: 2%;
+  }
+
