--- a/src/assets/scss/products.scss
+++ b/src/assets/scss/products.scss
@@ -11,7 +11,7 @@
 
 .products-all-table{
   padding: 2%;
-  width: 50%;
+  width: 45%;
 
 }
 
@@ -42,7 +42,8 @@
   border-radius: 15px;
   transition: 0.5s;
   box-shadow: -4px -2px 4px 2px #acb0b8, 6px 4px 10px 2px #acb0b8;
-  transition: 1s;
+  transition: 0.5s;
+  background-color: white;
 }
 
 .prdct-text{
@@ -54,6 +55,7 @@
   width: 100%;
   height: 200px;
   text-align: center;
+  border-radius: 5px;
 }
 
 .product-title{
