--- a/src/assets/scss/search.scss
+++ b/src/assets/scss/search.scss
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:700');
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
 .search-text{
   position: absolute;
   margin: auto;
@@ -19,7 +12,7 @@
   color: white;
 }
 
-.container {
+.container-search {
   position: absolute;
   margin: auto;
   top: 0;
@@ -28,7 +21,7 @@
   bottom: 0;
   width: 300px;
   height: 100px;
-  .search {
+  .search1 {
     position: absolute;
     margin: auto;
     top: 0;
@@ -74,7 +67,7 @@
       transition: all .5s;
     }
   }
-  input {
+  .search-input {
     font-family: 'Inconsolata', monospace;
     position: absolute;
     margin: auto;
@@ -89,7 +82,6 @@
     background: rgb(46, 44, 45) !important;
     color: white;
     text-shadow: 0 0 10px rgb(46, 44, 45);
-    padding: 0 80px 0 20px;
     border-radius: 30px;
     box-shadow: 0 0 25px 0 rgb(46, 44, 45),
                 0 20px 25px 0 rgba(0, 0, 0, 0.2);
@@ -106,7 +98,7 @@
       opacity: 1;
       cursor: text;
     }
-    &:focus ~ .search {
+    &:focus ~ .search1 {
       right: -250px;
       background: #151515;
       z-index: 6;
