--- a/src/assets/scss/dashSection.scss
+++ b/src/assets/scss/dashSection.scss
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.all-dash{
+.allDash{
     background-color: #ecf0f3;
 }
 .top{
@@ -230,7 +230,7 @@ h3{
 
 /*-------------------- ÜRÜNLER --------------------*/
 
-.dash-prdct-text{
+.dashProductText{
     text-align: center;
     padding-top: 5%;
     font-size: 25px;
@@ -327,7 +327,7 @@ h3{
 
 /*-------------------- İÇERİK --------------------*/
 
-.icerik-all{
+.icerikAll{
     text-align: center;
     padding: 10%;
 }
