--- a/src/assets/scss/dashSection.scss
+++ b/src/assets/scss/dashSection.scss
@@ -1,404 +1,385 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
-.allDash{
-    background-color: #ecf0f3;
+.allDash {
+  background-color: #ecf0f3;
 }
-.top{
-    margin-top: 0;
-    height: 60px;
-    align-items: center;
-    background-color: #0F1222;
-}
-
-.top-mail p{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 13px;
-    font-weight: bold;
+.top {
+  margin-top: 0;
+  height: 60px;
+  align-items: center;
+  background-color: #0f1222;
 }
 
-.header{
-    min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(../images/dashboard/background-city.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative; 
+.top-mail p {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 13px;
+  font-weight: bold;
 }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(../images/dashboard/background-city.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
-.nav-links{ /*Navbar sabit kalması için*/
-    flex: 1;
-    align-items: center;
-    text-align: left;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    background-color: rgb(29, 28, 28);
-    opacity: 90%;
-    z-index: 999;
-    height: 60px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.nav-links:hover{
-    opacity: 100;
-    background-color: black;
-    transition: 1s;
+.nav-links {
+  /*Navbar sabit kalması için*/
+  flex: 1;
+  align-items: center;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: rgb(29, 28, 28);
+  opacity: 90%;
+  z-index: 999;
+  height: 60px;
 }
 
-.nav-links ul li{
-    list-style: none;
-    display: inline-block; /* navbarı yatay yapmak için */
-    padding: 15px 20px;
-    position: relative;
-    color: white;
+.nav-links:hover {
+  opacity: 100;
+  background-color: black;
+  transition: 1s;
 }
 
-.nav-links ul li a{
-    padding: 8px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 13px;
+.nav-links ul li {
+  list-style: none;
+  display: inline-block; /* navbarı yatay yapmak için */
+  padding: 15px 20px;
+  position: relative;
+  color: white;
 }
 
-.nav-links ul li::after{ /* navbar altındaki çizgi */
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: rgb(255, 255, 255);
+.nav-links ul li a {
+  padding: 8px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 13px;
+}
+
+.nav-links ul li::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: rgb(255, 255, 255);
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+  width: 80%;
+}
+
+.text-box {
+  width: 90%;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text-box h1 {
+  font-size: 40px;
+}
+
+.text-box p {
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: white;
+}
+
+.more-btn {
+  display: inline;
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+nav i {
+  display: none !important;
+}
+
+@media (max-width: 700px) {
+  .text-box h1 {
+    font-size: 20px;
+  }
+  .nav-links ul li {
     display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.nav-links ul li:hover::after{
-    width: 80%;
-}
-
-.text-box{
-    width: 90%;
-    color: white;
+  }
+  .nav-links {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-
-.text-box h1{
-    font-size: 40px;
-}
-
-.text-box p{
-    margin: 10px 0 40px;
-    font-size: 14px;
+    background-color: crimson;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+    display: flex;
+    justify-content: space-between;
+  }
+  nav i {
+    display: block !important;
     color: white;
-}
-
-.more-btn{
-    display: inline;
-    text-decoration: none;
-    color: white;
-    border: 1px solid white;
-    padding: 12px 34px;
-    font-size: 13px;
-    background: transparent;
-    position: relative;
+    margin: 10px;
+    font-size: 22px;
     cursor: pointer;
-}
-
-
-nav i{
-    display: none !important;
-}
-
-@media(max-width: 700px){
-    .text-box h1{
-        font-size: 20px;
-    }
-    .nav-links ul li{
-        display: block;
-    }
-    .nav-links{
-        position: absolute;
-        background-color: crimson;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-        display: flex;
-        justify-content: space-between;
-    }
-    nav i{
-        display: block !important;
-        color: white;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-    }
-    .nav-links ul{
-        padding: 20px;
-    }
+  }
+  .nav-links ul {
+    padding: 20px;
+  }
 }
 
 /*-------------------- ADIMLAR --------------------*/
 
-.steps{
-width: 80;
-margin: auto;
-text-align: center;
-padding-top: 80px;
-padding: 10px;
+.steps {
+  width: 80;
+  margin: auto;
+  text-align: center;
+  padding-top: 5%;
+  padding: 8px;
 }
 
-h1{
-    font-size: 36px;
-    font-weight: 600;
+p {
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 22px;
 }
 
-p{
-    color: #777;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 22px;
-    padding: 22px;
+.row {
+  padding: 10px;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+  color: green;
+  font-size: 20px;
 }
 
-.row{
-    padding: 10px;
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-    color: green;
-    font-size: 20px;
+.categori-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
 }
 
-.categori-col{
-    flex-basis: 31%;
-    background: #fff3f3;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding: 20px 12px;
-    box-sizing: border-box;
-    transition: 0.5s;
+.categori-col p {
+  font-size: 15px;
+  color: #777;
 }
 
-.categori-col p{
-    font-size: 15px;
-    color: #777;
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin-top: 10px 0;
 }
 
-
-
-h3{
-    text-align: center;
-    font-weight: 600;
-    margin-top: 10px 0;
+.categori-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
-.categori-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
-    
+@media (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
 }
 
-@media(max-width:700px){
-    .row{
-        flex-direction: column;
-    }
-}
-
-.urun-detay-buton{
-    opacity: 0;
-    color: #3B4553;
-    text-decoration: none;
+.urun-detay-buton {
+  opacity: 0;
+  color: #3b4553;
+  text-decoration: none;
 }
 
 /*-------------------- ÜRÜNLER --------------------*/
 
-.dashProductText{
-    text-align: center;
-    padding-top: 5%;
-    font-size: 25px;
-    font-weight: bolder;
+.dashProductText {
+  text-align: center;
+  padding-top: 5%;
+  font-size: 25px;
+  font-weight: bolder;
 }
 
-.products{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
+.products {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
 }
 
-.product-col{
-    flex-basis: 32%;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
+.product-col {
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
 }
 
-.product-col img{
-    width: 100%;
-    display: block;
+.product-col img {
+  width: 100%;
+  display: block;
 }
 
-.layers{
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 0.5s;
+.layers {
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
 }
 
-.layers:hover{ /* Slider layer hover */
-    background: rgba(77, 75, 75, 0.7);
-    cursor: default;
-    
-    .urun-detay-buton{
-        opacity: 100;
-        color: #fff3f3;
-        font-size: 25px;
-        transition: 0.8s;
-    }
+.layers:hover {
+  background: rgba(77, 75, 75, 0.7);
+  cursor: default;
 }
 
-.layers h3{
-    width: 100%;
-    font-weight: 500;
-    color: white;
-    font-size: 26px;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-    opacity: 0;
-    transition: 0.5s;
+.layers h3 {
+  width: 100%;
+  font-weight: 500;
+  color: white;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
 }
 
-.layers:hover h3{
-    bottom: 49%;
-    opacity: 1;
+.layers:hover h3 {
+  bottom: 49%;
+  opacity: 1;
 }
 
-.sliderClass{
-    padding-top: 20px;
-    text-align: center;
-    padding-bottom: 20px;
+.sliderClass {
+  padding-top: 20px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
-.slider-edit{
-    padding: 10px;
+.slider-edit {
+  padding: 10px;
 }
 
-.more-prodct{
-    text-align: right;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.more-prodct {
+  text-align: right;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-.dash-prdct{
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: 15px;
-    color: #647285;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.dash-prdct {
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 15px;
+  color: #647285;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.dash-prdct:hover{
-    border-bottom:1px solid rgb(2, 2, 2);
-    
+.dash-prdct:hover {
+  border-bottom: 1px solid rgb(2, 2, 2);
 }
 
 /*-------------------- İÇERİK --------------------*/
 
-.icerikAll{
-    text-align: center;
-    padding: 10%;
+.icerikAll {
+  text-align: center;
+  padding: 10%;
 }
 
-.iceriks{
-    display: flex;
-    // flex: 0 0 50%;
-    // max-width: 50%
-    padding: 5%;
+.iceriks {
+  display: flex;
+  // flex: 0 0 50%;
+  // max-width: 50%
+  padding: 5%;
 }
 
-.icerik-baslik-1{
-    font-size: 23px;
-    font-weight: bolder;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #3B4553;
-    text-align: left;
-    padding-bottom: 2%;
+.icerik-baslik-1 {
+  font-size: 23px;
+  font-weight: bolder;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #3b4553;
+  text-align: left;
+  padding-bottom: 2%;
 }
 
-.icerik-1{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #3B4553;
-    text-align: left;
+.icerik-1 {
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #3b4553;
+  text-align: left;
 }
 
-.icerik-resim-1{
-    width: 200px;
-    position: relative;
+.icerik-resim-1 {
+  width: 200px;
+  position: relative;
 }
 
-.icerik-baslik-2{
-    font-size: 20px;
-    font-weight: bolder;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #3B4553;
-    text-align: right;
-    padding-bottom: 2%;
+.icerik-baslik-2 {
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #3b4553;
+  text-align: right;
+  padding-bottom: 2%;
 }
 
-.icerik-2{
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #3B4553;
-    text-align: right;
+.icerik-2 {
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #3b4553;
+  text-align: right;
 }
 
-.icerik-resim-2{
-    width: 300px;
-    position: relative;
+.icerik-resim-2 {
+  width: 300px;
+  position: relative;
 }
 
-.log-bttn{
-    display: inline;
-    text-decoration: none;
-    color: rgb(49, 48, 48);
-    border: 1px solid rgb(66, 66, 66);
-    padding: 12px 34px;
-    font-size: 13px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
+.log-bttn {
+  display: inline;
+  text-decoration: none;
+  color: rgb(49, 48, 48);
+  border: 1px solid rgb(66, 66, 66);
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
 }
 
-.log-bttn:hover{
-    border: 1px solid #080808;
-    background: #331d1b;
-    transition:1s;
-    color: white;
+.log-bttn:hover {
+  border: 1px solid #080808;
+  background: #331d1b;
+  transition: 1s;
+  color: white;
 }
-
-
-
