--- a/src/assets/scss/giveOffer.scss
+++ b/src/assets/scss/giveOffer.scss
@@ -1,141 +1,260 @@
-.giveOfferAll{
-  display: flex;
+$color-bg: #ebecf0;
+$color-shadow: #aeb1bd;
+$color-white: #fff;
+
+.giveOfferAll {
   padding-top: 5%;
+  padding-left: 2%;
+  padding-right: 2%;
   background-color: #ecf0f3;
+}
+
+.giveOfferAllCard {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.giveOfferCard {
+  color: #6f7691;
+  box-shadow: -5px -5px 20px rgb(211, 210, 210), 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  margin: 1%;
+  width: 18%;
+  border-end-end-radius: 10px;
+  border-end-start-radius: 10px;
+
+  &:hover {
+    box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
+    background-color: rgb(228, 227, 227);
+  }
+}
+
+.giveOfferCardIn {
+  color: #030303;
+  box-shadow: -2px -2px 5px rgb(214, 213, 213), 2px 2px 5px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 4%;
+  text-align: center;
+  font-size: 20px;
+  padding: 1%;
+
+}
+
+// -------------- modal css --------------
+
+.modalContainer {
+  margin: 40px auto;
+  padding-top: 0px;
+  position: relative;
+  width: 160px;
+  .modalBtn {
+    display: block;
+    color: #fff;
+    background: #8f8e8e;
+    font-size: 22px;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    text-align: center;
+    box-shadow: 0 5px 5px -5px #333;
+    transition: background 0.3s ease-in;
+    &:hover {
+      background: #494949;
+    }
+  }
+  .modalContent,
+  .modalBackdrop {
+    height: 0;
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+    cursor: pointer;
+    transition: opacity 0.2s ease-in;
+  }
+  .modalClose {
+    color: #aaa;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    padding-top: 3px;
+    background: #fff;
+    font-size: 16px;
+    width: 25px;
+    height: 25px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    &:hover {
+      color: #333;
+    }
+  }
+  .mmodalContentBtn {
+    position: absolute;
+    text-align: center;
+    cursor: pointer;
+    bottom: 20px;
+    right: 30px;
+    background: #a6a6a7;
+    color: #fff;
+    width: 50px;
+    border-radius: 2px;
+    font-size: 14px;
+    height: 32px;
+    padding-top: 9px;
+    font-weight: normal;
+    &:hover {
+      color: #fff;
+      background: #365690;
+    }
+  }
+  #modalToggle {
+    display: none;
+    &.active ~ .modalBackdrop,
+    &:checked ~ .modalBackdrop {
+      background-color: rgba(0, 0, 0, 0.6);
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      z-index: 9;
+      visibility: visible;
+      opacity: 1;
+      transition: opacity 0.2s ease-in;
+    }
+    &.active ~ .modalContent,
+    &:checked ~ .modalContent {
+      opacity: 1;
+      background-color: #fff;
+      width: 800px;
+      height: 450px;
+      padding: 10px 30px;
+      position: fixed;
+      left: calc(50% - 400px);
+      top: 12%;
+      border-radius: 4px;
+      z-index: 999;
+      pointer-events: auto;
+      cursor: auto;
+      visibility: visible;
+      box-shadow: 0 3px 7px rgba(0, 0, 0, 0.6);
+      @media (max-width: 400px) {
+        left: 0;
+      }
+    }
+  }
+}
+
+.ModalLeftRight {
+  display: flex;
+}
+
+.textGivePrev {
+  text-align: left;
+  font-size: 15px;
+  color: #6f7691;
+  font-weight: bolder;
+  width: 200px;
+}
+
+.labelModalDate {
+  cursor: pointer;
+  display: flex;
+  text-align: end;
+}
+
+.textModalCss {
+  font-size: 15px;
+  text-align: left;
+  text-align: justify;
+  padding: 8px;
+}
+
+.textModalCssDate {
+  font-size: 15px;
+  text-align: left;
+}
+
+.pointModalIcon {
+  font-size: 5px;
+  text-align: start;
+}
+
+.giveOfferCover {
   width: 100%;
 }
 
-.giveOfferModalLeftContent{
-  display: block;
-  width: 40%;
-}
-
-.giveOfferModalLeft{
-  width: 45%;
-  padding: 5px 5px;
-  background: #ecf0f3;
-  box-shadow:
-    4px 4px 4px 0px #d1d9e6 inset,
-    -4px -4px 4px 0px #ffffff inset;
-    margin: 2%;
-    width: 90%;
-}
-
-.radiogroupGiveOffer {
-    padding: 15px 15px;
-    background: #ecf0f3;
-    box-shadow:
-      4px 4px 4px 0px #d1d9e6 inset,
-      -4px -4px 4px 0px #ffffff inset;
-    margin: 2%;
-  }
-
-.giveIcerik{
-  display: flex;
-  text-align: center;
-}
-
-.giveIcerikText{
-  font-size: 15px;
-  font-weight: bolder;
-}
-
-.giveBtnNull{
-border: none;
-width: 100%;
-cursor: grab;
-color: blueviolet;
-}
-
-.textGiveOfferCss {
-  margin-left: 5px;
-  opacity: .8;
-  transition: opacity .2s linear, transform .3s ease-out;
-  color: black;
-  font-size: 15px;
-}
-
-.textGivePrev{
-  font-size: 15px;
-  text-align: start;
-  font-weight: bolder;
-  width: 160px;
-  color: rgb(35, 36, 102);
-}
-
-.giveOfferArea{
-  padding: 5px 10px;
-  background: #ecf0f3;
-  box-shadow:
-    2px 2px 0px 2px #d1d9e6 inset,
-    -2px -2px 0px 2px #ffffff inset;
-  font-size: 13px;
+.modalTextareaLeft {
+  color: #6f7691;
+  box-shadow: -5px -5px 20px $color-white, 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  margin: 1%;
   resize: none;
-  width: 200px;
-  height: 80px;
-}
-
-.giveOfferInput{
-  padding: 5px 10px;
-  background: #ecf0f3;
-  box-shadow:
-    2px 2px 0px 2px #d1d9e6 inset,
-    -2px -2px 0px 2px #ffffff inset;
-  font-size: 13px;
-  resize: none;
-  width: 200px;
-  height: 20px;
-  margin: 2%;
-}
-
-.tl{
+  width: 100%;
+  height: 100px;
   font-size: 15px;
+  color: #030303;
+  cursor: auto;
+  padding: 1%;
   font-weight: bolder;
-  margin-top: 2%;
 }
 
-.offersIput{
+.modalSendKismi {
   display: flex;
+  width: 100%;
 }
 
-.giveButtonArea{
+.modalSendKismiSag {
+  width: 25%;
   display: block;
 }
 
-.giveOfferButton {
-  background: none;
-  border: 1px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
+.modalSendKismiSol {
+  width: 75%;
+  padding-left: 3%;
 }
 
-.giveOfferButton:hover,
-  .giveOfferButton:focus {
-    box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-    transform: translateY(-0.25em);
-  }
+.modalTextareaRight {
+  color: #6f7691;
+  box-shadow: -5px -5px 20px $color-white, 5px 5px 20px $color-shadow;
+  resize: none;
+  font-size: 15px;
+  color: #030303;
+  cursor: auto;
+  font-weight: bolder;
+  padding: 2%;
+  width: 80%;
+}
 
-  $colors: ( 
-    raise: #585756
-  );
+.modalTextareaRightCover {
+  padding-top: 3%;
+  padding-left: 12%;
+}
 
-  @each $button, $color in $colors {
-    .#{$button} {
-      --color: #{$color};
-      --hover: #{adjust-hue($color, 45deg)};
-    }
-  }
-  
-  .giveOfferButton {  
-    color: var(--color);
-    transition: 0.25s;
+.modalSendButton {
+  color: #6f7691;
+  box-shadow: -5px -5px 20px $color-white, 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  margin: 1%;
+  height: 50px;
+  width: 85%;
+  border: #333;
+  font-size: 13px;
+  font-weight: bolder;
+  color: #333;
 
-    &:hover,
-    &:focus { 
-      border-color: var(--hover);
-      color: rgb(236, 236, 245);
-      background-color: rgb(37, 37, 37);
-    }
+  &:hover {
+    box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
+    background-color: rgb(228, 227, 227);
   }
+}
+
+.modalSendButtonCover {
+  padding-left: 12%;
+}
