--- a/src/assets/scss/myOffers.scss
+++ b/src/assets/scss/myOffers.scss
@@ -1,68 +1,102 @@
-.myOfferBody{
+$color-grey: rgb(207, 204, 204);
+$color-bg: #ebecf0;
+$color-shadow: #aeb1bd;
+
+.myOfferBody {
   background-color: #ecf0f3;
   height: 100%;
 }
 
-.myOfferTopText{
-text-align: center;
-padding-top: 5%;
-font-size: 25px;
+.myOfferTopText {
+  text-align: center;
+  padding-top: 5%;
+  font-size: 25px;
 }
 
-.myOfferAllModal{
+.myOfferAllModal {
   display: flex;
   flex-wrap: wrap;
   margin-left: 2%;
   margin-right: 1%;
 }
 
-.myOfferAll{
+.myOfferCover {
+  display: flex;
+}
+
+.myOfferAll {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 5% ;
 }
 
 .radiogroupMyOffer {
-  padding: 15px 15px;
-  background: #ecf0f3;
-  box-shadow:
-    4px 4px 4px 0px #d1d9e6 inset,
-    -4px -4px 4px 0px #ffffff inset;
+  // padding: 15px 15px;
+  // background: #ecf0f3;
+  // box-shadow: 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+  // margin: 1%;
+  // width: 45%;
+  // border-radius: 5px;
+  color: #6f7691;
+  box-shadow: -5px -5px 20px $color-grey, 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: auto;
   margin: 1%;
-  width: 45%;
-  border-radius: 5px;
+  padding: 1%;
+  border: #333;
+  font-size: 13px;
+  font-weight: bolder;
+  color: #333;
+  border-radius: 10px;
+  width: 46%;
+
+  &:hover {
+    box-shadow: -2px -2px 5px $color-grey, 2px 2px 5px $color-shadow;
+    background-color: rgb(228, 227, 227);
+  }
 }
 
-.myOfferBtnContent{
+.myOfferAllCol {
+  display: flex;
+}
+
+.myOfferLeftCol {
+  width: 30%;
+}
+
+.myOfferRightCol {
+  width: 70%;
+}
+
+.myOfferBtnContent {
   display: flex;
   align-items: flex-end;
 }
 
-.myOfferBtn{
-  width: 25%;
-  margin: 2%;
-  background-color: rgb(37, 95, 42);
-  border: none;
-  border-radius: 5px;
-  height: 30px;
-  color: white;
-  font-size: 15px;
-  cursor: pointer;
+.myOfferDetailBtn{
+  text-align: right;
+  color: #ecf0f3;
+  text-align: right;
 }
 
-.myOfferBtn:hover{
-  margin: 2%;
-  background-color: rgb(0, 0, 0);
-  border: none;
-  border-radius: 5px;
-  height: 30px;
-  color: rgb(108, 173, 82);
-  transition: 0.7s;
-  font-size: 15px;
+.myOfferBtn {
+  box-shadow: -5px -5px 20px $color-grey, 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
   cursor: pointer;
+  margin: 1%;
+  padding: 1%;
+  border: #333;
+  font-size: 13px;
+  font-weight: bolder;
+  color: #333;
+  border-radius: 5px;
+
+  &:hover {
+    box-shadow: -2px -2px 5px $color-grey, 2px 2px 5px $color-shadow;
+    background-color: rgba(204, 201, 201, 0.979);
+  }
 }
 
-.myOfferBtnDel{
+.myOfferBtnDel {
   width: 25%;
   margin: 2%;
   background-color: rgb(182, 32, 32);
@@ -74,7 +108,7 @@ font-size: 25px;
   cursor: pointer;
 }
 
-.myOfferBtnDel:hover{
+.myOfferBtnDel:hover {
   margin: 2%;
   background-color: rgb(6, 7, 3);
   transition: 0.7s;
@@ -86,16 +120,31 @@ font-size: 25px;
   cursor: pointer;
 }
 
-.myOfferTitle{
+.myOfferTitle {
   display: flex;
 }
 
-.labelMyOfferLeft{
+.tiks {
+  font-size: 18px;
+  color: rgb(36, 40, 75);
+  padding-right: 3px;
+  cursor: context-menu;
+}
+
+.labelMyOfferLeft {
   font-size: 15px;
   color: blue;
   width: 20%;
 }
-.labelMyOfferRight{
+.labelMyOfferRight {
   text-align: start;
   width: 80%;
+}
+
+.textGiveOfferCss{
+  font-size: 13px;
+  cursor: context-menu;
+  // white-space: nowrap; 
+  //   overflow: hidden;
+  //   text-overflow: ellipsis; /* Yazının kesildiği yerden üç nokta vermesini sağlıyoruz*/
 }
