--- a/src/assets/scss/products.scss
+++ b/src/assets/scss/products.scss
@@ -1,44 +1,34 @@
-.products-all-content{
+.products-all-content {
   padding-top: 5%;
   background-color: #ecf0f3;
 }
 
-.products-text{
+.products-text {
   text-align: center;
   font-size: 50px;
   font-weight: bold;
 }
 
-.products-all-table{
+.products-all-table {
   padding: 2%;
   width: 45%;
-
 }
 
-.product-cover{
+.product-cover {
   display: flex;
   flex-wrap: wrap;
-
 }
 
-.product-sttng{
-  // padding: 3%;
-  // margin-top: 5px;
-  // height: 100%;
-  // border: 2px;
-  // width: 100%;
-  // border: 1px solid;
-  // border-radius: 5px;
+.product-sttng {
   padding: 48px 64px;
-    border-radius: 16px;
-    background: #ecf0f3;
-    box-shadow:
-      4px 4px 4px 0px #d1d9e6 inset,
-      -4px -4px 4px 0px #ffffff inset;
-    margin: 2%;
+  border-radius: 16px;
+  background: #ecf0f3;
+  box-shadow: 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
+  margin: 2%;
+  height: 320px;
 }
 
-.product-sttng:hover{
+.product-sttng:hover {
   border-radius: 15px;
   transition: 0.5s;
   box-shadow: -4px -2px 4px 2px #acb0b8, 6px 4px 10px 2px #acb0b8;
@@ -46,52 +36,52 @@
   background-color: white;
 }
 
-.prdct-text{
+.prdct-text {
   padding: 0.5%;
   width: 100%;
 }
 
-.product-logo{
+.product-logo {
   width: 100%;
   height: 200px;
   text-align: center;
   border-radius: 5px;
 }
 
-.product-title{
+.product-title {
   float: left;
   color: rgb(0, 0, 0);
   font-weight: bolder;
   padding-left: 1%;
   padding-top: 1%;
-  min-width: 200px;
+  min-width: 120px;
 }
 
-.product-contnt{
+.product-contnt {
   font-size: medium;
   width: 100%;
   padding-top: 1%;
 }
 
-.product-name{
+.product-name {
   padding-left: 1%;
   color: blue;
   font-weight: bolder;
   float: left;
-  min-width: 200px;
+  min-width: 120px;
 }
 
-.product-name-contnt{
+.product-name-contnt {
   color: rgb(110, 110, 172);
   font-weight: bold;
 }
 
-.borders{
+.borders {
   display: flex;
   width: 100%;
 }
 
-.prod-url{
+.prod-url {
   text-align: right;
   margin: 5px;
 }
