--- a/src/assets/scss/userSettings.scss
+++ b/src/assets/scss/userSettings.scss
@@ -1,10 +1,12 @@
 .setting-all-div{
     background-color: #ecf0f3;
     height: 100vh;
+    text-align: center;
 }
 
 .setting-all-comp{
-    padding: 15vh;
+    padding: 1%;
+    text-align: center;
 }
 
 .settings-input{
@@ -15,24 +17,51 @@
 
 .settings-input-in{
     padding: 18px 35px;
-    border-radius: 16px;
+    border-radius: 5px;
     background: #ecf0f3;
     box-shadow:
       4px 4px 4px 0px #d1d9e6 inset,
       -4px -4px 4px 0px #ffffff inset;
     margin: 1%;
-    width: 600px;
+    width: 50%;
     font-size: 15px;
 }
 
 .setting-text{
     font-size: 50px;
-    font-weight: bold;
+    font-weight: bolder;
     text-align: left;
-    margin-top: -5%;
 }
 
 .set-title{
-    width: 100px;
+    width: 20%;
     text-align: right;
+    font-size: 20px;
+    font-weight: bolder;
 }
+
+
+$color-bg: #ebecf0;
+$color-shadow: #aeb1bd;
+$color-white: #fff;
+
+.settingCard {
+    color: #6f7691;
+    box-shadow: -5px -5px 20px rgb(211, 210, 210), 5px 5px 20px $color-shadow;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+    width: 50%;
+    height: 80%;
+    margin-top: 5%;
+    margin-left: 25%;
+  
+    &:hover {
+      box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
+      background-color: rgb(228, 227, 227);
+    }
+  }
+
+
+
+
+
