--- a/src/assets/scss/search.scss
+++ b/src/assets/scss/search.scss
@@ -7,9 +7,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 400px;
+  width: 60%;
   height:30%;
   color: white;
+  font-size: 20px;
+  text-align: center;
 }
 
 .containerSearch {
