--- a/src/assets/scss/companies.scss
+++ b/src/assets/scss/companies.scss
@@ -22,21 +22,32 @@
 }
 
 .company-sttng {
-  top: 0;
-  padding: 48px 64px;
-  border-radius: 16px;
+  padding: 3rem 3rem;
+  border-radius: 1.5rem;
   background: #ecf0f3;
   box-shadow: 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
   margin: 2%;
-  height:180px;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .companies-table {
+    width: 100%;
+  }
+  .company-sttng {
+    padding: 1rem 1rem;
+    margin: 1%;
+    height: 100%;
+    width: 90%;
+  }
 }
 
 .company-sttng:hover {
-  // box-shadow: 10px 10px 30px 10px rgba(0, 0, 0, 0.7);
   box-shadow: 5px 20px 10px rgb(62, 55, 78, 0.9);
-  border-start-start-radius: 25px;
-  border-bottom-right-radius: 25px;
-  top: -10px;
+  border-start-start-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  margin-top: -5px;
+  transition: 0.7s;
 }
 
 .cmpny-text {
