--- a/src/assets/scss/errorPage.scss
+++ b/src/assets/scss/errorPage.scss
@@ -1,6 +1,7 @@
 .ErrorPageAll {
   font-family: "Lato", sans-serif;
   height: 100vh;
+  width: 100%;
   color: rgb(248, 248, 248);
   margin: 0;
   text-align: center;
@@ -9,7 +10,6 @@
 }
 
 .err404 {
-  font-size: 60px;
   color: -webkit-linear-gradient(#eee, #333);
   font-size: 100px;
   font-weight: bold;
@@ -33,11 +33,29 @@
 
 .typed-out {
   overflow: hidden;
-  border-right: 0.15em solid orange;
   white-space: nowrap;
   animation: typing 3s steps(60) forwards, blinking 0.8s infinite;
   font-size: 1.6rem;
-  width: 0;
+}
+
+@media (max-width: 700px) {
+  .typed-out {
+    text-align: center;
+    padding-top: 10%;
+    font-size: 1rem;
+    width: 90% !important;
+    height: 200px;
+  }
+  .err404 {
+    padding-top: 10%;
+    color: -webkit-linear-gradient(#eee, #333);
+    font-size: 60px;
+    font-weight: bold;
+  }
+  .errH2 {
+    padding-top: 10%;
+    font-size: 20px;
+  }
 }
 
 @keyframes typing {
