--- a/src/assets/scss/login_Register_Info.scss
+++ b/src/assets/scss/login_Register_Info.scss
@@ -1,4 +1,4 @@
-$ruler: 16px;
+$ruler: 15px;
 $color-red: #ae1100;
 $color-bg: #ebecf0;
 $color-shadow: #babecc;
@@ -14,7 +14,7 @@ $color-white: #fff;
   text-align: center;
   font-size: 25px;
   font-weight: bold;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .formLogin {
@@ -28,7 +28,18 @@ $color-white: #fff;
   border: 0;
   outline: 0;
   font-size: $ruler;
-  border-radius: $ruler * 20;
+  border-radius: $ruler*2;
+  padding: $ruler;
+  background-color: $color-bg;
+  text-shadow: 1px 1px 0 $color-white;
+}
+
+.buttonLogin,
+.inputLogg {
+  border: 0;
+  outline: 0;
+  font-size: $ruler;
+  border-radius: $ruler*2;
   padding: $ruler;
   background-color: $color-bg;
   text-shadow: 1px 1px 0 $color-white;
@@ -36,18 +47,23 @@ $color-white: #fff;
 
 .labelLogg {
   display: block;
-  margin-bottom: $ruler * 1.5;
+  margin-bottom: 3%;
+}
+
+.labelLoggInfo {
+  display: block;
+  margin-bottom: 1%;
   width: 100%;
 }
 
 .inputLogg {
-  margin-right: $ruler/2;
+  // margin-right: $ruler/2;
   box-shadow: inset 2px 2px 5px $color-shadow, inset -5px -5px 10px $color-white;
   width: 100%;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
-  appearance: none;
-  -webkit-appearance: none;
+  // appearance: none;
+  // -webkit-appearance: none;
 
   &:focus {
     box-shadow: inset 1px 1px 2px $color-shadow,
@@ -55,13 +71,74 @@ $color-white: #fff;
   }
 }
 
+@media (max-width: 768px) {
+  .formLogin {
+    width: 90%;
+  }
+  .buttonLogg{
+    width: 50% !important;
+    text-align: center;
+    margin: 2%;
+  }
+  .regsDiv {
+    padding-top: 65% !important;
+  }
+  .loginAll{
+    height: 100vh;
+  }
+}
+
 .buttonLogg {
+  width: 15%;
   color: #61677c;
   font-weight: bold;
-  box-shadow: -5px -5px 20px $color-white, 5px 5px 20px $color-shadow;
+  box-shadow: -5px -5px 20px #c8c8c9, 5px 5px 20px $color-shadow;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
-  font-weight: 600;
+
+  &:hover {
+    box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
+  }
+
+  &:active {
+    box-shadow: inset 1px 1px 2px $color-shadow,
+      inset -1px -1px 2px $color-white;
+  }
+
+  .icon {
+    margin-right: $ruler/2;
+  }
+
+  &.unit {
+    border-radius: $ruler/2;
+    line-height: 0;
+    width: $ruler * 3;
+    height: $ruler * 3;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 $ruler/2;
+    font-size: $ruler * 1.2;
+
+    .icon {
+      margin-right: 0;
+    }
+  }
+
+  &.red {
+    display: block;
+    width: 100%;
+    color: $color-red;
+  }
+}
+
+.buttonLogin {
+  width: 15%;
+  color: #61677c;
+  font-weight: bold;
+  box-shadow: -5px -5px 20px #c8c8c9, 5px 5px 20px $color-shadow;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
 
   &:hover {
     box-shadow: -2px -2px 5px $color-white, 2px 2px 5px $color-shadow;
@@ -110,16 +187,16 @@ $color-white: #fff;
   }
 }
 
-.coverLogin {
+.coverLoginReg {
   text-align: center;
+  display: flex;
 }
 
 .linkLogg {
   border: 0;
   outline: 0;
   font-size: $ruler;
-  border-radius: $ruler * 20;
-  padding: $ruler;
+  border-radius: $ruler;
   background-color: $color-bg;
   text-shadow: 1px 1px 0 $color-white;
 }
@@ -134,23 +211,21 @@ $color-white: #fff;
   margin-right: 1%;
 }
 
-
 //////////////////////////////////////////////////////////
 
-
-.infoCompanyText{
+.infoCompanyText {
   font-size: 15px;
   font-weight: bolder;
-  width: 5%;
+  text-align: left;
+  width: 200px;
 }
 
-.textAndInput{
+.textAndInput {
   display: flex;
 }
 
 .formInfoUserComp {
-  width: 50%;
-  padding-top: 2%;
+  width: 60%;
   margin: 0 auto;
 }
 
@@ -158,18 +233,17 @@ $color-white: #fff;
   border: 0;
   outline: 0;
   font-size: $ruler;
-  border-radius: $ruler * 2;
+  border-radius: $ruler;
   padding: $ruler;
   background-color: $color-bg;
   text-shadow: 1px 1px 0 $color-white;
-  margin-right: $ruler/2;
   box-shadow: inset 2px 2px 5px $color-shadow, inset -5px -5px 10px $color-white;
-  width: 100%;
+  width: 90%;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
   appearance: none;
   -webkit-appearance: none;
-  margin-left: 10%;
+  margin-left: 2%;
 
   &:focus {
     box-shadow: inset 1px 1px 2px $color-shadow,
@@ -177,27 +251,53 @@ $color-white: #fff;
   }
 }
 
-.InfoUserCompTitle{
+.InfoUserCompTitle {
   padding-top: 5%;
   text-align: center;
   font-size: 25px;
   font-weight: bold;
 }
 
-.iconReg{
+@media (max-width: 768px) {
+  .InfoUserCompTitle {
+    padding-top: 15%;
+    padding-bottom: 3%;
+  }
+  .textAndInput {
+    display: block;
+  }
+  .infoCompanyText {
+    text-align: center;
+    padding-top: 4%;
+  }
+  .buttonLogin{
+    margin-top: 10%;
+    text-align: center;
+    width: 50%;
+  }
+  .inputInfoUserComp {
+    width: 100%;
+  }
+}
+
+// .coverSettingInfo{
+//   border: 1px solid;
+// }
+
+.iconReg {
   margin-top: 5%;
   font-size: 20px;
   width: 100px;
   color: #61677c;
 }
 
-.iconReg:hover{
+.iconReg:hover {
   margin-top: 3%;
   width: 100px;
   color: #742222;
 }
 
-.bottonTextLog{
+.bottonTextLog {
   padding-top: 5%;
   font-size: 15px;
   font-weight: bolder;
