--- a/src/assets/scss/myOffers.scss
+++ b/src/assets/scss/myOffers.scss
@@ -4,7 +4,7 @@ $color-shadow: #aeb1bd;
 
 .myOfferBody {
   background-color: #ecf0f3;
-  height: 100%;
+  height: 100vh;
 }
 
 .myOfferTopText {
@@ -16,8 +16,7 @@ $color-shadow: #aeb1bd;
 .myOfferAllModal {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 2%;
-  margin-right: 1%;
+  margin: 1%;
 }
 
 .myOfferCover {
@@ -30,12 +29,6 @@ $color-shadow: #aeb1bd;
 }
 
 .radiogroupMyOffer {
-  // padding: 15px 15px;
-  // background: #ecf0f3;
-  // box-shadow: 4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff inset;
-  // margin: 1%;
-  // width: 45%;
-  // border-radius: 5px;
   color: #6f7691;
   box-shadow: -5px -5px 20px $color-grey, 5px 5px 20px $color-shadow;
   transition: all 0.2s ease-in-out;
@@ -45,7 +38,6 @@ $color-shadow: #aeb1bd;
   border: #333;
   font-size: 13px;
   font-weight: bolder;
-  color: #333;
   border-radius: 10px;
   width: 46%;
 
